--- a/cheatsheets/git.html
+++ b/cheatsheets/git.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 <header class="site">
-  <div class="inner">
-    <div class="logo">CS</div>
-    <div class="title">Cheat Sheets <small>– Accès rapide mobile</small></div>
+  <div class="inner" style="display: flex; align-items: center;">
+    <div class="logo"><img src="/assets/images/GIT/log_git-vs-github.png" alt="Logo Git" style="height: 40px;"></div>
+    <div class="title" style="margin-left: 16px;">Cheat Sheets <small>– Accès rapide mobile</small></div>
   </div>
 </header>
 
