--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </a>
 
     <a class="card" href="/cheatsheets/git.html">
-      <span class="tag">Git / GitHub</span>
+      <span class="tag"><img src="/assets/images/GIT/log_git-vs-github.png" alt="Logo Git" style="height: 16px; vertical-align: middle;">Git / GitHub</span>
       <h3>Git – commandes & bonnes pratiques</h3>
       <p>Branches, commits, PR, reset/stash…</p>
     </a>
@@ -39,7 +39,7 @@
     </a>
 
         <a class="card" href="/cheatsheets/AZ-900.html">
-      <span class="tag">AZ-900</span>
+      <span class="tag"><image src="/assets/images/AZ-900/logo_AZ900.png" alt="Logo AZ-900" style="height: 16px; vertical-align: middle;"> AZ-900</span>
       <h3>Preparation Cloud certification AZ-900</h3>
       <p></p>
     </a>
