refactor: Modification de style + bouton retour menu

--- a/cheatsheets/AZ-900.html
+++ b/cheatsheets/AZ-900.html
@@ -9,12 +9,10 @@
 </head>
 <body>
 
-  <!-- Ajoute ce bloc juste après <body> -->
-<div style="margin-bottom: 20px;">
-  <a href="../index.html">
-    <button style="padding: 8px 16px; font-size: 16px; cursor: pointer;">
-      Menu principal
-    </button>
+<!-- Boutons de navigation -->
+<div class="nav-buttons">
+  <a href="../home.html" class="btn btn-primary">
+    ← Menu principal
   </a>
 </div>
 
