--- a/cheatsheets/autres.html
+++ b/cheatsheets/autres.html
@@ -8,6 +8,13 @@
 </head>
 <body>
 <header class="site"><div class="inner"><a class="logo" href="/">CS</a><div class="title">Divers <small>Cheat Sheets</small></div></div></header>
+
+<!-- Boutons de navigation -->
+<div class="nav-buttons">
+  <a href="../home.html" class="btn btn-primary">
+    ← Menu principal
+  </a>
+</div>
 <main class="prose">
   <h1>Placeholders</h1>
   <p>Ajoute ici d’autres fiches statiques (HTML). Tu peux dupliquer ce fichier et lier depuis l’accueil.</p>
