--- a/cheatsheets/git.html
+++ b/cheatsheets/git.html
@@ -15,6 +15,13 @@
   </div>
 </header>
 
+<!-- Boutons de navigation -->
+<div class="nav-buttons">
+  <a href="../home.html" class="btn btn-primary">
+    ← Menu principal
+  </a>
+</div>
+
 <div class="container">
   <h1>Git / GitHub</h1>
   <p>Rappel des commandes essentielles et des bonnes pratiques pour travailler avec Git et GitHub.</p>
