--- a/cheatsheets/linux.html
+++ b/cheatsheets/linux.html
@@ -9,11 +9,18 @@
 </head>
 <body>
 <header class="site">
-  <div class="inner">
-    <div class="logo">CS</div>
-    <div class="title">Cheat Sheets <small>– Accès rapide mobile</small></div>
+  <div class="inner"style="display: flex; align-items: center;">
+    <div class="logo"><img src="/assets/images/linux/logo_linux.png" alt="Logo linux" style="height: 40px;"></div>
+    <div class="title" style="margin-left: 16px;">Cheat Sheets <small>– Accès rapide mobile</small></div>
   </div>
 </header>
+
+<!-- Boutons de navigation -->
+<div class="nav-buttons">
+  <a href="../home.html" class="btn btn-primary">
+    ← Menu principal
+  </a>
+</div>
 
 <div class="container">
   <h1>Linux – Commandes de base</h1>
