--- a/cheatsheets/sas.html
+++ b/cheatsheets/sas.html
@@ -24,17 +24,15 @@
 <body>
 <header class="site">
   <div class="inner">
-    <div class="logo">CS</div>
+    <div class="logo"><img src="/assets/images/SAS/logo_sas.png" alt="Logo SAS" style="height: 40px;"></div>
     <div class="title">Cheat Sheets <small>– Accès rapide mobile</small></div>
   </div>
 </header>
 
-<!-- Ajoute ce bloc juste après <body> -->
-<div style="margin-bottom: 20px;">
-  <a href="../index.html">
-    <button style="padding: 8px 16px; font-size: 16px; cursor: pointer;">
-      Menu principal
-    </button>
+<!-- Boutons de navigation -->
+<div class="nav-buttons">
+  <a href="../home.html" class="btn btn-primary">
+    ← Menu principal
   </a>
 </div>
 
