--- a/menu_cheatsheep.html
+++ b/menu_cheatsheep.html
@@ -15,13 +15,20 @@
   </div>
 </header>
 
+<!-- Boutons de navigation -->
+<div class="nav-buttons">
+  <a href="home.html" class="btn btn-primary">
+    ← Menu principal
+  </a>
+</div>
+
 <div class="container">
   <h1>Mes Cheat Sheets</h1>
   <p>Fiche personnel de competence.</p>
 
   <div class="grid">
     <a class="card" href="/cheatsheets/sas.html">
-      <span class="tag">SAS</span>
+      <span class="tag"><img src="/assets/images/SAS/logo_sas.png" alt="Logo SAS" style="height: 16px; vertical-align: middle;"> SAS</span>
       <h3>SAS – Data, Proc, Macros</h3>
       <p>Création/modif de datasets, import, compare, macros, pass-through…</p>
     </a>
@@ -33,7 +40,7 @@
     </a>
 
     <a class="card" href="/cheatsheets/linux.html">
-      <span class="tag">Linux</span>
+      <span class="tag"><img src="/assets/images/linux/logo_linux.png" alt="Logo linux" style="height: 16px; vertical-align: middle;"> Linux</span>
       <h3>Linux – navigation & fichiers</h3>
       <p>pwd, cd, ls, mkdir, mv… chemins relatifs.</p>
     </a>
