--- a/menu_myproject.html
+++ b/menu_myproject.html
@@ -15,6 +15,13 @@
   </div>
 </header>
 
+<!-- Boutons de navigation -->
+<div class="nav-buttons">
+  <a href="home.html" class="btn btn-primary">
+    ← Menu principal
+  </a>
+</div>
+
 <div class="container">
   <h1>Mes Cheat Sheets</h1>
   <p>Fiche personnel de competence.</p>
