feat: Add Rust cheatsheet + refactor SAS cheatsheet

--- a/cheatsheets/linux.html
+++ b/cheatsheets/linux.html
@@ -42,6 +42,7 @@
     <li><code>ls -A</code> → Inclure fichiers cachés</li>
     <li><code>ls -l</code> → Avec détails (droits, taille, date, propriétaire)</li>
     <li><code>ls -rtl</code> → Tri par date (les plus récents en dernier)</li>
+    <li><code>ls -la</code> → Lister tout avec détails</li>
   </ul>
 
   <h2>📄 Lire un fichier</h2>
