--- a/menu_cheatsheep.html
+++ b/menu_cheatsheep.html
@@ -51,6 +51,12 @@
       <p></p>
     </a>
 
+    <a class="card" href="/cheatsheets/rust.html">
+      <span class="tag"><img src="/assets/images/RUST/rust-logo.png" alt="Logo Rust" style="height: 16px; vertical-align: middle;"> Rust</span>
+      <h3>Rust – syntaxe & ownership</h3>
+      <p>Variables, types, boucles, fonctions, ownership, borrowing…</p>
+    </a>
+
     <a class="card" href="/cheatsheets/autres.html">
       <span class="tag">Divers</span>
       <h3>Autres fiches</h3>
