--- a/cheatsheets/autres.html
+++ b/cheatsheets/autres.html
@@ -3,23 +3,55 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Cheat Sheet — Divers</title>
+  <title>Divers – Idir Guettab</title>
   <link rel="stylesheet" href="/assets/css/style.css"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <meta name="theme-color" content="#0a0a0b"/>
 </head>
 <body>
-<header class="site"><div class="inner"><a class="logo" href="/">CS</a><div class="title">Divers <small>Cheat Sheets</small></div></div></header>
 
-<!-- Boutons de navigation -->
+<!-- Header -->
+<header class="site">
+  <div class="inner">
+    <a href="../home.html" class="logo">
+      <div class="logo-icon">IG</div>
+      <div class="logo-text">Idir <span>Guettab</span></div>
+    </a>
+    <nav>
+      <a href="../home.html#projets">Projets</a>
+      <a href="../home.html#competences">Skills</a>
+      <a href="../menu_cheatsheep.html" class="active">Cheatsheets</a>
+      <a href="../home.html#contact">Contact</a>
+    </nav>
+  </div>
+</header>
+
+<!-- Navigation -->
 <div class="nav-buttons">
-  <a href="../home.html" class="btn btn-primary">
-    ← Menu principal
+  <a href="../menu_cheatsheep.html" class="btn btn-outline">
+    ← Toutes les cheatsheets
   </a>
 </div>
-<main class="prose">
-  <h1>Placeholders</h1>
-  <p>Ajoute ici d’autres fiches statiques (HTML). Tu peux dupliquer ce fichier et lier depuis l’accueil.</p>
-</main>
-<footer class="site">© 2025</footer>
+
+<div class="container">
+  <h1>Autres fiches</h1>
+  <p>Espace reserve pour de futures cheatsheets et notes diverses.</p>
+
+  <div class="tip">
+    <strong>En construction</strong> – De nouvelles fiches seront ajoutees au fur et a mesure de mon apprentissage.
+  </div>
+</div>
+
+<!-- Footer -->
+<footer class="site">
+  <div class="footer-links">
+    <a href="https://github.com/DidirGtb" target="_blank">GitHub</a>
+    <a href="https://www.linkedin.com/in/idir-guettab/" target="_blank">LinkedIn</a>
+  </div>
+  <p>&copy; 2025 Idir Guettab</p>
+</footer>
 <script src="/assets/js/copy.js" defer></script>
 </body>
 </html>
