--- a/cheatsheets/sas.html
+++ b/cheatsheets/sas.html
@@ -3,46 +3,35 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Cheat Sheets – SAS</title>
+  <title>SAS – Idir Guettab</title>
   <link rel="stylesheet" href="/assets/css/style.css"/>
-  <meta name="theme-color" content="#ffffff"/>
-  <style>
-    pre {
-      background: #1e1e1e;
-      border: 1px solid #333;
-      border-radius: 8px;
-      padding: 1em;
-      overflow-x: auto;
-      margin: 1em 0;
-      color: #d4d4d4;
-    }
-    pre code {
-      color: #d4d4d4;
-      font-family: "SFMono-Regular", Menlo, Consolas, monospace;
-      font-size: 0.9em;
-    }
-    .keyword { color: #569cd6; font-weight: bold; }
-    .comment { color: #6a9955; font-style: italic; }
-    .string { color: #ce9178; }
-    .section-icon { margin-right: 8px; }
-    h2 { border-bottom: 2px solid #1d6db4; padding-bottom: 8px; margin-top: 2em; }
-    h3 { color: #1d6db4; margin-top: 1.5em; }
-    .tip { background: #e7f3ff; border-left: 4px solid #1d6db4; padding: 10px 15px; margin: 1em 0; border-radius: 0 6px 6px 0; }
-    .warning { background: #fff3cd; border-left: 4px solid #ffc107; padding: 10px 15px; margin: 1em 0; border-radius: 0 6px 6px 0; }
-  </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <meta name="theme-color" content="#0a0a0b"/>
 </head>
 <body>
+
+<!-- Header -->
 <header class="site">
-  <div class="inner" style="display: flex; align-items: center;">
-    <div class="logo"><img src="/assets/images/SAS/logo_sas.png" alt="Logo SAS" style="height: 40px;"></div>
-    <div class="title" style="margin-left: 16px;">Cheat Sheets <small>– Accès rapide mobile</small></div>
+  <div class="inner">
+    <a href="../home.html" class="logo">
+      <div class="logo-icon">IG</div>
+      <div class="logo-text">Idir <span>Guettab</span></div>
+    </a>
+    <nav>
+      <a href="../home.html#projets">Projets</a>
+      <a href="../home.html#competences">Skills</a>
+      <a href="../menu_cheatsheep.html" class="active">Cheatsheets</a>
+      <a href="../home.html#contact">Contact</a>
+    </nav>
   </div>
 </header>
 
-<!-- Boutons de navigation -->
+<!-- Navigation -->
 <div class="nav-buttons">
-  <a href="../home.html" class="btn btn-primary">
-    ← Menu principal
+  <a href="../menu_cheatsheep.html" class="btn btn-outline">
+    ← Toutes les cheatsheets
   </a>
 </div>
 
@@ -537,7 +526,14 @@ date_num = <span class="keyword">input</span>(<span class="string">'2025-12-25'<
 
 </div>
 
-<footer class="site">© 2025 — Cheat Sheets statiques • Déployé sur Netlify</footer>
+<!-- Footer -->
+<footer class="site">
+  <div class="footer-links">
+    <a href="https://github.com/DidirGtb" target="_blank">GitHub</a>
+    <a href="https://www.linkedin.com/in/idir-guettab/" target="_blank">LinkedIn</a>
+  </div>
+  <p>&copy; 2025 Idir Guettab</p>
+</footer>
 <script src="/assets/js/copy.js" defer></script>
 </body>
 </html>
