--- a/cheatsheets/git.html
+++ b/cheatsheets/git.html
@@ -3,22 +3,35 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Cheat Sheets – Git / GitHub</title>
+  <title>Git / GitHub – Idir Guettab</title>
   <link rel="stylesheet" href="/assets/css/style.css"/>
-  <meta name="theme-color" content="#ffffff"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <meta name="theme-color" content="#0a0a0b"/>
 </head>
 <body>
+
+<!-- Header -->
 <header class="site">
-  <div class="inner" style="display: flex; align-items: center;">
-    <div class="logo"><img src="/assets/images/GIT/log_git-vs-github.png" alt="Logo Git" style="height: 40px;"></div>
-    <div class="title" style="margin-left: 16px;">Cheat Sheets <small>– Accès rapide mobile</small></div>
+  <div class="inner">
+    <a href="../home.html" class="logo">
+      <div class="logo-icon">IG</div>
+      <div class="logo-text">Idir <span>Guettab</span></div>
+    </a>
+    <nav>
+      <a href="../home.html#projets">Projets</a>
+      <a href="../home.html#competences">Skills</a>
+      <a href="../menu_cheatsheep.html" class="active">Cheatsheets</a>
+      <a href="../home.html#contact">Contact</a>
+    </nav>
   </div>
 </header>
 
-<!-- Boutons de navigation -->
+<!-- Navigation -->
 <div class="nav-buttons">
-  <a href="../home.html" class="btn btn-primary">
-    ← Menu principal
+  <a href="../menu_cheatsheep.html" class="btn btn-outline">
+    ← Toutes les cheatsheets
   </a>
 </div>
 
@@ -96,7 +109,14 @@
   </ul>
 </div>
 
-<footer class="site">© 2025 — Cheat Sheets statiques • Déployé sur Netlify</footer>
+<!-- Footer -->
+<footer class="site">
+  <div class="footer-links">
+    <a href="https://github.com/DidirGtb" target="_blank">GitHub</a>
+    <a href="https://www.linkedin.com/in/idir-guettab/" target="_blank">LinkedIn</a>
+  </div>
+  <p>&copy; 2025 Idir Guettab</p>
+</footer>
 <script src="/assets/js/copy.js" defer></script>
 </body>
 </html>
