--- a/home.html
+++ b/home.html
@@ -37,8 +37,8 @@
       Disponible pour de nouvelles opportunites
     </div>
     <h1>
-      Salut, je suis <span class="gradient">Idir</span><br>
-      Data Analyst & Developpeur
+      Hello, je suis <span class="gradient">Idir</span><br>
+      Analytics engineer & Developpeur
     </h1>
     <p class="subtitle">
       Passionne par la data, le code et l'apprentissage continu.
@@ -116,14 +116,14 @@
   </div>
 
   <div class="skills-list" style="justify-content: center;">
-    <span class="skill-tag">SAS</span>
+    <span class="skill-tag"><img src="/assets/images/SAS/logo_sas.png" alt="SAS" style="height: 16px;"> SAS</span>
     <span class="skill-tag">Python</span>
     <span class="skill-tag">SQL</span>
     <span class="skill-tag">Rust</span>
     <span class="skill-tag">Git / GitHub</span>
     <span class="skill-tag">Linux</span>
     <span class="skill-tag">Azure</span>
-    <span class="skill-tag">Power BI</span>
+    <span class="skill-tag">Tableau</span>
     <span class="skill-tag">Excel</span>
     <span class="skill-tag">HTML / CSS</span>
   </div>
