feat: add RUST project / Geotir Project

--- a/home.html
+++ b/home.html
@@ -85,18 +85,18 @@
   </div>
 
   <div class="grid">
-    <a class="card" href="Projets/projet_1.html">
-      <div class="card-icon">📊</div>
-      <span class="tag">Data Analysis</span>
-      <h3>Projet 1</h3>
-      <p>Description de votre premier projet. Analyse de donnees, visualisation et insights.</p>
+    <a class="card" href="Projets/geotir.html">
+      <div class="card-icon">🗺️</div>
+      <span class="tag">Data Engineering</span>
+      <h3>Geotir - Data Pipeline</h3>
+      <p>Pipeline ETL pour centraliser les donnees publiques de Paris. APIs, PostgreSQL, Docker, Tableau.</p>
     </a>
 
-    <a class="card" href="Projets/projet_2.html">
-      <div class="card-icon">🚀</div>
-      <span class="tag">Development</span>
-      <h3>Projet 2</h3>
-      <p>Description de votre second projet. Developpement, automatisation et solutions.</p>
+    <a class="card" href="Projets/calculator.html">
+      <div class="card-icon">🧮</div>
+      <span class="tag">Rust</span>
+      <h3>Calculator CLI</h3>
+      <p>Calculatrice en ligne de commande : gestion I/O, parsing, gestion d'erreurs avec match.</p>
     </a>
 
     <a class="card" href="menu_myproject.html">
@@ -123,6 +123,7 @@
     <span class="skill-tag">Git / GitHub</span>
     <span class="skill-tag">Linux</span>
     <span class="skill-tag">Azure</span>
+    <span class="skill-tag">Dataiku</span>
     <span class="skill-tag">Tableau</span>
     <span class="skill-tag">Excel</span>
     <span class="skill-tag">HTML / CSS</span>
