--- a/menu_myproject.html
+++ b/menu_myproject.html
@@ -41,19 +41,43 @@
     <p>Realisations professionnelles et personnelles</p>
   </div>
 
+  <!-- Data Engineering Projects -->
+  <h2>📊 Data Engineering</h2>
   <div class="grid">
-    <a class="card" href="Projets/projet_1.html">
-      <div class="card-icon">📊</div>
-      <span class="tag">Data Analysis</span>
-      <h3>Projet 1</h3>
-      <p>Description de votre premier projet. Analyse de donnees, visualisation et insights.</p>
+    <a class="card" href="Projets/geotir.html">
+      <div class="card-icon">🗺️</div>
+      <span class="tag">Stage Aptero</span>
+      <h3>Geotir - Data Pipeline</h3>
+      <p>Pipeline ETL pour centraliser les donnees publiques de Paris. APIs, PostgreSQL, Docker, Tableau.</p>
+    </a>
+  </div>
+
+  <!-- Rust Projects -->
+  <h2>🦀 Projets Rust</h2>
+  <div class="grid">
+    <a class="card" href="Projets/hello_rust.html">
+      <div class="card-icon">🦀</div>
+      <span class="tag">Apprentissage</span>
+      <h3>Hello Rust</h3>
+      <p>Premier projet d'apprentissage Rust couvrant les fondamentaux du langage.</p>
     </a>
 
-    <a class="card" href="Projets/projet_2.html">
-      <div class="card-icon">🚀</div>
-      <span class="tag">Development</span>
-      <h3>Projet 2</h3>
-      <p>Description de votre second projet. Developpement, automatisation et solutions.</p>
+    <a class="card" href="Projets/calculator.html">
+      <div class="card-icon">🧮</div>
+      <span class="tag">CLI</span>
+      <h3>Calculator CLI</h3>
+      <p>Calculatrice interactive en ligne de commande avec gestion d'erreurs.</p>
+    </a>
+  </div>
+
+  <!-- Other Projects (placeholder) -->
+  <h2>🚀 Autres Projets</h2>
+  <div class="grid">
+    <a class="card" href="#">
+      <div class="card-icon">📈</div>
+      <span class="tag">A venir</span>
+      <h3>Prochainement...</h3>
+      <p>De nouveaux projets seront ajoutes au fur et a mesure.</p>
     </a>
   </div>
 </div>
@@ -64,7 +88,7 @@
     <a href="https://github.com/DidirGtb" target="_blank">GitHub</a>
     <a href="https://www.linkedin.com/in/idir-guettab/" target="_blank">LinkedIn</a>
   </div>
-  <p>&copy; 2025 Idir Guettab – Deploye sur Netlify</p>
+  <p>&copy; 2025 Idir Guettab</p>
 </footer>
 
 <script src="/assets/js/copy.js" defer></script>
