fix: icon and schema

--- a/Projets/geotir.html
+++ b/Projets/geotir.html
@@ -68,12 +68,14 @@
   </div>
 
   <h2>🏗️ Architecture</h2>
-  <pre><code>┌────────────┐    Collect    ┌────────────┐    Format    ┌────────────┐
-│ call_api.py│ ───────────> │ processing │ ───────────> │ convert_df │
+  <pre><code>
+┌────────────┐    Collect    ┌────────────┐    Format    ┌────────────┐
+│ call_api.py│ ───────────>  │ processing │ ───────────> │ convert_df │
 └────────────┘               └────────────┘              └────┬───────┘
                                                               ▼
                                                            PostgreSQL
-                                                           (bdd.py)</code></pre>
+                                                           (bdd.py)
+                                                          </code></pre>
 
   <h2>📦 Modules</h2>
   <table>
