fix: icon and schema

--- a/home.html
+++ b/home.html
@@ -119,9 +119,10 @@
     <span class="skill-tag"><img src="/assets/images/SAS/logo_sas.png" alt="SAS" style="height: 16px;"> SAS</span>
     <span class="skill-tag">Python</span>
     <span class="skill-tag">SQL</span>
-    <span class="skill-tag">Rust</span>
-    <span class="skill-tag">Git / GitHub</span>
-    <span class="skill-tag">Linux</span>
+    <span class="skill-tag"><img src="/assets/images/RUST/rust-logo.png" alt="Rust" style="height: 16px;"> Rust</span>
+    <span class="skill-tag"><img src="/assets/images/GIT/log_git-vs-github.png" alt="Git / GitHub" style="height: 16px;">  / GitHub</span>
+    <span class="skill-tag"><img src="/assets/images/linux/logo_linux.png" alt="Linux" style="height: 16px;"> Linux</span>
+    <span class="skill-tag">Docker</span>
     <span class="skill-tag">Azure</span>
     <span class="skill-tag">Dataiku</span>
     <span class="skill-tag">Tableau</span>
