feat: add APTERO-Yundera

--- a/Projets/geotir.html
+++ b/Projets/geotir.html
@@ -43,9 +43,14 @@
 
   <h2>📋 Contexte</h2>
   <p>
-    Geotir est un middleware de pipeline de donnees concu pour centraliser les donnees publiques de la ville de <strong>Paris</strong>.
-    Le systeme extrait, formate, enrichit et stocke les donnees dans une base PostgreSQL pour permettre un acces simplifie et des analyses futures.
+    Geotir est un <strong>POC (Proof of Concept)</strong> de pipeline de donnees concu pour un partenaire client d'Aptero.
+    L'objectif : centraliser les donnees publiques de la ville de <strong>Paris</strong> pour l'aide a la decision immobiliere.
+    Le systeme extrait, formate, enrichit et stocke les donnees dans une base PostgreSQL.
   </p>
+  <div class="tip">
+    <strong>Objectif du POC</strong><br>
+    Definir la vision et la direction du projet, identifier les limitations techniques, et valider la faisabilite de l'approche avant un developpement complet.
+  </div>
 
   <h2>📊 Sources de donnees</h2>
   <div class="grid" style="grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));">
