--- a/menu_myproject.html
+++ b/menu_myproject.html
@@ -41,6 +41,17 @@
     <p>Realisations professionnelles et personnelles</p>
   </div>
 
+  <!-- DevOps Projects -->
+  <h2>🐳 DevOps & Cloud</h2>
+  <div class="grid">
+    <a class="card" href="Projets/yundera-appstore.html">
+      <div class="card-icon">🐳</div>
+      <span class="tag">Stage Aptero</span>
+      <h3>Yundera AppStore</h3>
+      <p>Configuration et deploiement d'applications Docker pour la plateforme cloud Yundera. CasaOS, HTTPS, Mesh Router.</p>
+    </a>
+  </div>
+
   <!-- Data Engineering Projects -->
   <h2>📊 Data Engineering</h2>
   <div class="grid">
