--- a/home.html
+++ b/home.html
@@ -41,8 +41,8 @@
       Analytics engineer & Developpeur
     </h1>
     <p class="subtitle">
-      Passionne par la data, le code et l'apprentissage continu.
-      Je transforme les donnees en insights et les idees en solutions.
+      Passionne par le cloud, l'infrastructure et l'automatisation.
+      Je construis des pipelines, deploie des applications et optimise les environnements.
     </p>
     <div class="hero-buttons">
       <a href="#projets" class="btn btn-primary">
@@ -85,18 +85,18 @@
   </div>
 
   <div class="grid">
+    <a class="card" href="Projets/yundera-appstore.html">
+      <div class="card-icon">🐳</div>
+      <span class="tag">DevOps</span>
+      <h3>Yundera AppStore</h3>
+      <p>Configuration et deploiement d'applications Docker pour une plateforme cloud. CasaOS, HTTPS, Mesh Router.</p>
+    </a>
+
     <a class="card" href="Projets/geotir.html">
       <div class="card-icon">🗺️</div>
       <span class="tag">Data Engineering</span>
       <h3>Geotir - Data Pipeline</h3>
       <p>Pipeline ETL pour centraliser les donnees publiques de Paris. APIs, PostgreSQL, Docker, Tableau.</p>
-    </a>
-
-    <a class="card" href="Projets/calculator.html">
-      <div class="card-icon">🧮</div>
-      <span class="tag">Rust</span>
-      <h3>Calculator CLI</h3>
-      <p>Calculatrice en ligne de commande : gestion I/O, parsing, gestion d'erreurs avec match.</p>
     </a>
 
     <a class="card" href="menu_myproject.html">
@@ -116,18 +116,18 @@
   </div>
 
   <div class="skills-list" style="justify-content: center;">
-    <span class="skill-tag"><img src="/assets/images/SAS/logo_sas.png" alt="SAS" style="height: 16px;"> SAS</span>
+    <span class="skill-tag">Docker</span>
+    <span class="skill-tag">Docker Compose</span>
+    <span class="skill-tag"><img src="/assets/images/linux/logo_linux.png" alt="Linux" style="height: 16px;"> Linux</span>
+    <span class="skill-tag">Azure</span>
+    <span class="skill-tag">Networking</span>
     <span class="skill-tag">Python</span>
     <span class="skill-tag">SQL</span>
-    <span class="skill-tag"><img src="/assets/images/RUST/rust-logo.png" alt="Rust" style="height: 16px;"> Rust</span>
     <span class="skill-tag"><img src="/assets/images/GIT/log_git-vs-github.png" alt="Git / GitHub" style="height: 16px;">  / GitHub</span>
-    <span class="skill-tag"><img src="/assets/images/linux/logo_linux.png" alt="Linux" style="height: 16px;"> Linux</span>
-    <span class="skill-tag">Docker</span>
-    <span class="skill-tag">Azure</span>
-    <span class="skill-tag">Dataiku</span>
-    <span class="skill-tag">Tableau</span>
-    <span class="skill-tag">Excel</span>
-    <span class="skill-tag">HTML / CSS</span>
+    <span class="skill-tag">CI/CD</span>
+    <span class="skill-tag">YAML</span>
+    <span class="skill-tag"><img src="/assets/images/RUST/rust-logo.png" alt="Rust" style="height: 16px;"> Rust</span>
+    <span class="skill-tag">PostgreSQL</span>
   </div>
 </section>
 
